chore: remove resume nombre de carcasses
