# api-express/src/controllers/fei.ts
@@ -170,10 +170,6 @@ export async function saveFei(
   if (body.hasOwnProperty(Prisma.FeiScalarFieldEnum.created_by_user_id)) {
     nextFei.created_by_user_id = body.created_by_user_id;
   }
-  if (body.hasOwnProperty(Prisma.FeiScalarFieldEnum.resume_nombre_de_carcasses)) {
-    nextFei.resume_nombre_de_carcasses = body.resume_nombre_de_carcasses || null;
-  }
-
   /*
   *
   *
